# fara-agent

./: .gitattributes  .gitignore  AGENTS.md  README.md  agent.py  browser.py  config.json  prompts.py  pyproject.toml  run_agent.py  start_edge.ps1  start_server.bat  test_auth_wall.py
.agents/skills/fara/: SKILL.md
.claude/: settings.local.json
.claude/skills/fara/: SKILL.md
